--- a/404.html
+++ b/404.html
@@ -64,14 +64,10 @@
         WRONG WRONG WRONG
       </p>
 
-      <p>
-        <a href="https://help.github.com/pages/">Read the full documentation</a>
-        for more information about using <strong>GitHub Pages</strong>.
-      </p>
+     
 
       <div id="suggestions">
-        <a href="https://githubstatus.com">GitHub Status</a> &mdash;
-        <a href="https://twitter.com/githubstatus">@githubstatus</a>
+        <a href="http://static3.businessinsider.com/image/55838881eab8ea7733429911-905-679/confused-bear-3.jpg">GitHub Status</a> 
       </div>
 
       <a href="/" class="logo logo-img-1x">
