--- a/404.html
+++ b/404.html
@@ -64,7 +64,8 @@
         WRONG WRONG WRONG
       </p>
 
-     
+     <img src="http://static3.businessinsider.com/image/55838881eab8ea7733429911-905-679/confused-bear-3.jpg" alt="Where am I" width="200"
+         height="80">
 
       <div id="suggestions">
         <a href="http://static3.businessinsider.com/image/55838881eab8ea7733429911-905-679/confused-bear-3.jpg">GitHub Status</a> 
